--- a/personal-finance-app-frontend/src/components/dashboard/small/Search.scss
+++ b/personal-finance-app-frontend/src/components/dashboard/small/Search.scss
@@ -16,6 +16,6 @@
 
 .icon-wrapper {
     position: absolute;
-    top: 30%;
-    right: 5%;
+    bottom: 30%;
+    left: 18rem;
 }
