--- a/personal-finance-app-frontend/src/components/dashboard/small/SortBy.scss
+++ b/personal-finance-app-frontend/src/components/dashboard/small/SortBy.scss
@@ -1,1 +1,22 @@
 @import '../../../styles/mixins.scss';
+
+
+
+.sortby__desktop {
+    display: none;
+}
+
+.sortby__mobile {
+    all: unset;
+}
+
+
+
+
+@media screen and (min-width: 1024px) {
+    .sortby__desktop {
+        display: flex;
+        align-items: center;
+    }
+
+}
